<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/image_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:maxLines="1"
                    android:ellipsize="end"
                    tools:text="/path/to/image"/>

                <LinearLayout
                    android:id="@+id/label_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="Labels:" />

                    <TextView
                        android:id="@+id/image_labels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="label1, label2" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/safe_search_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/headline_safe_search" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/label_safe_search_adult"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/safe_search_adult" />
                            <TextView
                                android:id="@+id/safe_search_adult"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/label_safe_search_adult"
                                tools:text="0/5" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/label_safe_search_spoof"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/safe_search_spoof" />
                            <TextView
                                android:id="@+id/safe_search_spoof"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/label_safe_search_spoof"
                                tools:text="0/5" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/label_safe_search_medical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/safe_search_medical" />
                            <TextView
                                android:id="@+id/safe_search_medical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/label_safe_search_medical"
                                tools:text="0/5" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <TextView
                                android:id="@+id/label_safe_search_violence"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/safe_search_violence" />
                            <TextView
                                android:id="@+id/safe_search_violence"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/label_safe_search_violence"
                                tools:text="0/5" />
                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>